--- a/Bodrocode.LoggingAdvanced.Console.Test/Bodrocode.LoggingAdvanced.Console.Test.csproj
+++ b/Bodrocode.LoggingAdvanced.Console.Test/Bodrocode.LoggingAdvanced.Console.Test.csproj
@@ -7,11 +7,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="1.1.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
+    <PackageReference Include="System.ValueTuple" Version="4.3.1" />
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Bodrocode.LoggingAdvanced.Console.Test.Legacy\Bodrocode.LoggingAdvanced.Console.Test.Legacy.csproj" />
     <ProjectReference Include="..\Bodrocode.LoggingAdvanced.Console\Bodrocode.LoggingAdvanced.Console.csproj" />
   </ItemGroup>
 
