--- a/Bodrocode.LoggingAdvanced.Console/Bodrocode.LoggingAdvanced.Console.csproj
+++ b/Bodrocode.LoggingAdvanced.Console/Bodrocode.LoggingAdvanced.Console.csproj
@@ -1,21 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Description>Console logger provider implementation for Microsoft.Extensions.Logging.</Description>
+    <Description>Console logger with additional formatting features as a replacement of Microsoft.Extensions.Logging.Console.</Description>
     <VersionPrefix>1.1.0</VersionPrefix>
     <TargetFrameworks>netstandard1.3</TargetFrameworks>
     <NoWarn>$(NoWarn);CS1591</NoWarn>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <AssemblyName>Microsoft.Extensions.Logging.Console</AssemblyName>
-    <PackageId>Microsoft.Extensions.Logging.Console</PackageId>
+    <AssemblyName>Bodrocode.LoggingAdvanced.Console</AssemblyName>
+    <PackageId>Bodrocode.LoggingAdvanced.Console</PackageId>
     <PackageTags>logging</PackageTags>
     <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>git://github.com/aspnet/logging</RepositoryUrl>
+    <RepositoryUrl>git://github.com/ilya-chumakov/LoggingAdvanced</RepositoryUrl>
     <NetStandardImplicitPackageVersion>1.6.1</NetStandardImplicitPackageVersion>
     <GenerateNeutralResourcesLanguageAttribute>false</GenerateNeutralResourcesLanguageAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+    <Authors>Ilya Chumakov</Authors>
+    <AssemblyVersion>0.1.0.0</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
+    <Version>0.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
