--- a/Bodrocode.LoggingAdvanced.Console/Bodrocode.LoggingAdvanced.Console.csproj
+++ b/Bodrocode.LoggingAdvanced.Console/Bodrocode.LoggingAdvanced.Console.csproj
@@ -20,6 +20,7 @@
     <AssemblyVersion>0.1.0.0</AssemblyVersion>
     <FileVersion>0.1.0.0</FileVersion>
     <Version>0.1.0</Version>
+    <PackageProjectUrl>https://github.com/ilya-chumakov/LoggingAdvanced</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
