--- a/Bodrocode.LoggingAdvanced.Console.Test/Bodrocode.LoggingAdvanced.Console.Test.csproj
+++ b/Bodrocode.LoggingAdvanced.Console.Test/Bodrocode.LoggingAdvanced.Console.Test.csproj
@@ -5,6 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="appsettings-example.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="JsonConfiguration\appsettings-example.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="1.1.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
     <PackageReference Include="System.ValueTuple" Version="4.3.1" />
