--- a/Bodrocode.LoggingAdvanced.Console/Bodrocode.LoggingAdvanced.Console.csproj
+++ b/Bodrocode.LoggingAdvanced.Console/Bodrocode.LoggingAdvanced.Console.csproj
@@ -24,7 +24,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="1.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="1.1.2" />
   </ItemGroup>
 </Project>
