--- a/LoggingAdvanced.Console/LoggingAdvanced.Console.csproj
+++ b/LoggingAdvanced.Console/LoggingAdvanced.Console.csproj
@@ -17,7 +17,8 @@
     <Authors>Ilya Chumakov</Authors>
     <AssemblyVersion>0.4.0.0</AssemblyVersion>
     <FileVersion>0.4.0.0</FileVersion>
-    <Version>0.4.0</Version>
+    <VersionPrefix>0.4.0</VersionPrefix>
+    <VersionSuffix>beta1</VersionSuffix>
     <PackageProjectUrl>https://github.com/ilya-chumakov/LoggingAdvanced</PackageProjectUrl>
   </PropertyGroup>
 
