--- a/LoggingAdvanced.Console/LoggingAdvanced.Console.csproj
+++ b/LoggingAdvanced.Console/LoggingAdvanced.Console.csproj
@@ -18,7 +18,7 @@
     <AssemblyVersion>0.4.0.0</AssemblyVersion>
     <FileVersion>0.4.0.0</FileVersion>
     <VersionPrefix>0.4.0</VersionPrefix>
-    <VersionSuffix>beta2</VersionSuffix>
+    <VersionSuffix></VersionSuffix>
     <PackageProjectUrl>https://github.com/ilya-chumakov/LoggingAdvanced</PackageProjectUrl>
   </PropertyGroup>
 
